Add setting to specify driver plugins (#167)